--- a/src/content/developer/S3.md
+++ b/src/content/developer/S3.md
@@ -21,3 +21,12 @@ Permite la subida de archivos  de hasta 5Tb. Cada objeto es una pareja key-value
 Por defecto los buckets solo pueden ser accedidos por el creador y son privados. Existen los access logs, que nos informan de cada vez que alguien hace un petición o sube un archivo, lo lee o lo borra. No esta activado por defecto, se debe hacer manualmente. Los logs se guardan en otro bucket.
 
 Los Bucket ACL (Access Control List) sirven para determinar los permisos sobre recursos determinados dentro de un bucket. Encryption at rest es lo mismo que server side encription. La encriptacion en tránsito corresponde a SSL/TLS. También existe la client side encription, que significa encriptar la los archivos antes de subirlos a S3.
+
+El cifrado del lado del servidor SSE-S3 protege los datos en reposo. S3 cifra cada objeto con una clave única. Como protección adicional, cifra la clave con una clave que rota periódicamente. El cifrado del lado del servidor de Amazon S3 utiliza uel estándar de cifrado avanzado de 256 bits (AES-256).
+
+##### CLOUDFRONT
+Cloudfront es un sistema de distribución de servidores que envían páginas web y otros recursos estáticos. Las zonas donde el contenido es cacheado se llaman Edge Locations. Cloudfront origin es el origen de todos los archivos que la distribución va a servir, puede ser un bucket, un EC2, Elastic Load balancer o Route53. Cloudfront distribution consiste en el origen más los ajustes de configuración para el contenido a distribuir mediante el CDN.
+
+Cuando un cliente realiza una petición, ésta se dirige de manera automática al Edge Location más cercano. Los objetos son cacheados por un periodo de tiempo llamado time to live, después, se eliminan y la siguiente petición que se reciba será cacheada de nuevo.
+
+S3 Transfer Acceleration permite la transferencia rśpida, segura y sencilla de archivos a través de largas distancias entre los usuarios y S3. Los usuarios suben el archivo a la Edge Location y ésta se conecta al S3 central por medio de la red propia de AWS, la cual es mucho mas rápida que la red pública.
