avanzado mas developer

--- a/src/content/developer/S3.md
+++ b/src/content/developer/S3.md
@@ -18,7 +18,7 @@ Permite la subida de archivos  de hasta 5Tb. Cada objeto es una pareja key-value
 - Glacier deep archive: Tiempo por defecto de respuesta de 12 horas. Mínimo de 180 dias.
 - Intelligent tier: coloca los archivos en la categoria mas rentable según el uso que se le de.
 
-Por defecto los buckets solo pueden ser accedidos por el creador y son privados. Existen los access logs, que nos informan de cada vez que alguien hace un petición o sube un archivo, lo lee o lo borra. No esta activado por defecto, se debe hacer manualmente. Los logs se guardan en otro bucket.
+Por defecto los buckets solo pueden ser accedidos por el creador y son privados. Existen los Access Logs, que informan de cada vez que alguien hace un petición o sube un archivo, lo lee o lo borra. No esta activado por defecto, se debe hacer manualmente. Los logs se guardan en otro bucket. Para que un bucket pueda acceder a un archivo de otro bucket diferente, es necesario actualizar la política de CORS.
 
 Los Bucket ACL (Access Control List) sirven para determinar los permisos sobre recursos determinados dentro de un bucket. Encryption at rest es lo mismo que server side encription. La encriptacion en tránsito corresponde a SSL/TLS. También existe la client side encription, que significa encriptar la los archivos antes de subirlos a S3.
 
@@ -30,3 +30,6 @@ Cloudfront es un sistema de distribución de servidores que envían páginas web
 Cuando un cliente realiza una petición, ésta se dirige de manera automática al Edge Location más cercano. Los objetos son cacheados por un periodo de tiempo llamado time to live, después, se eliminan y la siguiente petición que se reciba será cacheada de nuevo.
 
 S3 Transfer Acceleration permite la transferencia rśpida, segura y sencilla de archivos a través de largas distancias entre los usuarios y S3. Los usuarios suben el archivo a la Edge Location y ésta se conecta al S3 central por medio de la red propia de AWS, la cual es mucho mas rápida que la red pública.
+
+##### ATHENA
+Es un servicio que permite ejecutar querys SQL sobre información almacenada en S3. Es serverless, es decir, se paga por query y Tb escaneado. Es muy sencillo de usar y no es necesario ningún proceso ETL. Es útil para hacer búsquedas de logs, aunque también está pensado para análisis e informes de coste y uso. Para usar Athena, es obligatorio crear un bucket en el que se guardarán todos los resultados de las querys y seleccionarlo dentro del apartado settings, result query ylocation. Luego se crea una base de datos y las tablas.
